--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-/* General page styles */
+
 body,
 html {
   margin: 0;
@@ -12,14 +12,11 @@ html {
   width: 100vw;
   min-height: 100vh;
   display: flex;
-  /* justify-content: center; */
   flex-direction: column;
   align-items: center;
 }
-
-/* Navbar styles */
 .navbar {
-  background-color: #3498db; /* Blue shade that matches button colors */
+  background-color: #3498db; 
   padding: 10px 20px;
   padding-right: 50px;
   display: flex;
@@ -38,7 +35,7 @@ html {
 }
 
 .navbar a {
-  color: white; /* Ensures links are white */
+  color: white; 
   text-decoration: none;
   margin-right: 20px;
   font-weight: bold;
@@ -46,10 +43,9 @@ html {
 }
 
 .navbar a:hover {
-  color: #e0e0e0; /* Light grey for hover effect */
+  color: #e0e0e0; 
 }
 
-/* Specific styling for Clerk's UserButton if needed */
 .clerk-user-button {
   background-color: transparent;
   border: none;
@@ -58,9 +54,8 @@ html {
 }
 
 .clerk-user-button:hover {
-  color: #e0e0e0; /* Consistency in hover effects */
+  color: #e0e0e0; 
 }
 
-/* Additional styles to ensure text and elements are vertically aligned properly */
 .navbar * {
 }
